# snowfalldb

./: .gitattributes  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  debug.md  flake.nix  notes.md  todo.md
configs/: editor.nix  kernel.nix
nix/: default.nix  lib.nix  mustang.nix
nix/sysroot/: Cargo.nix  cargo.py  sysroot-cargo.nix  sysroot.nix  update-lockfile.sh
notes/: administration.md  asynchronous.md  confidential.md  distributed.md  exploits.md  indexes.md  misc.md  networking.md  nix.md  notes.md  parallelism.md  performance.md  programs.md  shell.md  snowfalldb.md  storage.md  virtualization.md
notes/videos/: Fractal-Tree-Indexes-Theory-and-Practice.mkv
src/: main.rs
