[package]
name = "snowfalldb"
version = "0.1.0"
edition = "2021"
# resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Waiting on mustang to merge no_std
mustang = { git = "ssh://git@github.com/jordanisaacs/mustang", branch = "nostd", default-features = false, features = ["threads", "default-alloc"] }
sc = "0.2.7"
# Waiting on naked_function to merge no_std
sjlj = { git = "ssh://git@github.com/jordanisaacs/sjlj", branch = "nostd"}
linux-raw-sys = { version = "0.2.1", default-features = false, features = ["no_std", "general"]}
rustix = { version = "0.36.7", default-features = false, features = ["fs", "io_uring"]}
atomic = "0.5"
origin = { version = "0.6.1", default-features = false, features = ["threads"] }
log = { version = "0.4.17", default-features = false }

[features]
default = ["log"]
log = ["mustang/log"]
