[package]
name = "snowfalldb"
version = "0.1.0"
edition = "2021"
# resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mustang = { git = "https://github.com/sunfishcode/mustang.git", default-features = false, features = ["threads", "default-alloc"] }
sc = "0.2.7"
sjlj = "0.1.3"
linux-raw-sys = { version = "0.2.1", default-features = false, features = ["no_std", "general"]}
rustix = { version = "0.36.7", default-features = false, features = ["fs", "io_uring"]}
atomic = "0.5"
origin = { git = "https://github.com/sunfishcode/mustang.git", default-features = false, features = ["threads"] }
log = { version = "0.4.17", default-features = false }

[features]
default = ["log"]
log = ["mustang/log"]
